@@ -37,7 +37,7 @@ FEATURES:
 	+ Keyboard friendly
 	+ Support for multimedia keys
 	+ Commandline control
-	+ Available in 18 languages
+	+ Available in 19 languages
 
 DOCUMENTATION/FAQ:
 	http://sonata.berlios.de/documentation.html
