@@ -49,7 +49,7 @@
 		- Keyboard friendly<br/>
 		- Support for multimedia keys<br/>
 		- Commandline control<br/>
-		- Available in 18 languages<br/>
+		- Available in 19 languages<br/>
 		 </p>
 
 </div>
